--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,1 +1,16 @@
-<h1>header test</h1>
+<header>
+    <div class="head-container">
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+            <a class="nav-link" href="/compose">Add worry</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="/worries">Worry list</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="#">Login</a>
+            </li>  
+            </li>
+        </ul>
+    </div>
+</header>
