--- a/views/partials/compose.ejs
+++ b/views/partials/compose.ejs
@@ -14,6 +14,7 @@
     <title>Worries</title>
   </head>
   <body>
+    <%- include("header"); -%>
     <div>
       <form action="/compose" method="post">
         <div class="mb-3">
@@ -38,6 +39,7 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
+    <%- include("footer"); -%>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <script
