--- a/views/partials/worries.ejs
+++ b/views/partials/worries.ejs
@@ -14,7 +14,10 @@
     <title>worries list</title>
   </head>
   <body>
+    <%- include("header"); -%>
+    
     <div class="row">
+      
     <% worryList.forEach(function(worry) { %>
     <!-- <h1><%= worry.title %></h1>
     <h2><%= worry.content %></h2> -->
@@ -33,6 +36,7 @@
           </div>
         </div>
       </div>
+    
     <% }); %>
   
 
@@ -47,5 +51,6 @@
       integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
       crossorigin="anonymous"
     ></script>
+    <%- include("footer"); -%>
   </body>
 </html>
