Add mongoose / css changes

--- a/views/partials/compose.ejs
+++ b/views/partials/compose.ejs
@@ -16,7 +16,7 @@
   <body>
     <%- include("header"); -%>
     <div>
-      <form action="/compose" method="post">
+      <form class="compose-form" action="/compose" method="post">
         <div class="mb-3">
           <label for="title" class="form-label">Title</label>
           <input
