--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -14,7 +14,7 @@
     <title>Worries</title>
   </head>
   <body>
-    <%- include("header"); -%>
+    <%- include("partials/header"); -%>
     <div>
       <form class="compose-form" action="/compose" method="post">
         <div class="mb-3">
@@ -39,7 +39,7 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
-    <%- include("footer"); -%>
+    <%- include("partials/footer"); -%>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <script
