--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header>
-    <div class="head-container">
+    <div>
         <ul class="nav justify-content-end">
             <li class="nav-item">
             <a class="nav-link" href="/compose">Add worry</a>
