--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,42 +11,12 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Edit</title>
+    <title>Register</title>
   </head>
   <body>
-    <%- include("header"); -%>
-    <div>
-      <form class="edit-form" action="/save" method="post">
-        <div class="mb-3">
-          <input
-            type="hidden"
-            name="_id"
-            class="form-control"
-            id="id"
-            aria-describedby="emailHelp"
-            value="<%= editWorry._id %>"
-          />
-          <label for="title" class="form-label">Title</label>
-          <input
-            type="text"
-            name="title"
-            class="form-control"
-            id="title"
-            aria-describedby="emailHelp"
-            value="<%= editWorry.title %>"
-          />
-        </div>
-        <div class="mb-3">
-          <label for="content">Content</label>
-          <textarea class="form-control" name="content" id="content" rows="3">
-<%= editWorry.content %>
-        </textarea
-          >
-        </div>
-        <button type="submit" class="btn btn-primary">Save</button>
-      </form>
-    </div>
-    <%- include("footer"); -%>
+    <%- include("partials/header"); -%>
+    <h1>This is the Register page.</h1>
+    <%- include("partials/footer"); -%>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <script
