--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,19 +13,26 @@
     <link rel="stylesheet" href="/css/styles.css" />
     <title>Home</title>
   </head>
-  <body>
-    <%- include("partials/header"); -%>
+  <body class="home-body">
+    <!-- <%- include("partials/header"); -%> -->
     <div class="home-container">
-      <img
+      <!-- <img
         class="home-img"
-        src="images/Taking_notes.svg"
+        src="images/guy_thinking_developer_ladtop.jpg"
         alt="home-page-img"
-        width="850"
-        height="850"
-      />
+        width=""
+        height=""
+      /> -->
+      <a href="#" class="btn-shine">Start Worries Notes</a>
+      <!-- <button type="button" class="btn btn-outline-dark btn-lg sign-up">
+        Sign in with Google
+      </button>
+      <button type="button" class="btn btn-outline-dark btn-lg sign-in">
+        Sign in with Facebook
+      </button> -->
     </div>
 
-    <%- include("partials/footer"); -%>
+    <!-- <%- include("partials/footer"); -%> -->
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
@@ -37,6 +44,5 @@
       integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
       crossorigin="anonymous"
     ></script>
-    <script src="app.js"></script>
   </body>
 </html>
