--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,13 +19,13 @@ footer {
   padding: 1% 0;
 }
 
-a {
+/* a {
   color: #fff;
 }
 
 a:hover {
   color: #000;
-}
+} */
 
 .compose-form {
   padding: 5%;
@@ -42,11 +42,61 @@ a:hover {
 
 /*************************** HOME SECTION *******************************/
 
-.home-container {
-  background-color: #e1e5ea;
-  margin: 0;
+/* .home-container {
+  background-image: url("images/note_and_notebook.jpg");
+  
+  width: 50%;
+  height: 50%px;
+} */
+
+.home-body {
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url("images/note_and_notebook.jpg") no-repeat center center/cover;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.home-img {
-  margin: 0;
+.home-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+a.btn-shine {
+  font-size: 1.5rem;
+  padding: 1rem 3rem;
+  color: #f4f4f4;
+  text-transform: uppercase;
+}
+
+.btn-shine {
+  text-decoration: none;
+  border: 1px solid rgb(63, 63, 68);
+  position: relative;
+  overflow: hidden;
+}
+
+.btn-shine:hover {
+  box-shadow: 1px 1px 25px 10px rgba(63, 63, 68, 0.4);
+  color: #b9b9ca;
+}
+
+.btn-shine:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    120deg,
+    transparent,
+    rgba(63, 63, 68, 0.4),
+    transparent
+  );
+  transition: all 650ms;
+}
+
+.btn-shine:hover:before {
+  left: 100%;
 }
