--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,48 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/css/styles.css" />
-    <title>Home</title>
-  </head>
+<%- include("partials/header"); -%>
   <body class="home-body">
-    <!-- <%- include("partials/header"); -%> -->
-    <div class="home-container">
-      <!-- <img
-        class="home-img"
-        src="images/guy_thinking_developer_ladtop.jpg"
-        alt="home-page-img"
-        width=""
-        height=""
-      /> -->
-      <a href="#" class="btn-shine">Start Worries Notes</a>
-      <!-- <button type="button" class="btn btn-outline-dark btn-lg sign-up">
-        Sign in with Google
-      </button>
-      <button type="button" class="btn btn-outline-dark btn-lg sign-in">
-        Sign in with Facebook
-      </button> -->
-    </div>
 
-    <!-- <%- include("partials/footer"); -%> -->
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
-      integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
-      integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
-      crossorigin="anonymous"
-    ></script>
+    <div class="home-container">
+      <a href="/connect" class="btn-shine">Start Worries Notes</a>
+    </div>
+  <%- include("partials/footer"); -%>
   </body>
 </html>
