--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,16 +1,29 @@
 <header>
-    <div>
-        <ul class="nav justify-content-end">
-            <li class="nav-item">
-            <a class="nav-link" href="/compose">Add worry</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="/worries">Worry list</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
-            </li>  
-            </li>
-        </ul>
-    </div>
+    <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
+
+    <!-- CONFIG THE HEAD THE RIGHT WAY -->
+
+    <link rel="stylesheet" href="/css/bootstrap-social.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <title><%= pageTitle %></title>
+  </head>
 </header>
