--- a/views/worries.ejs
+++ b/views/worries.ejs
@@ -1,24 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/styles.css" />
-    <title>worries list</title>
-  </head>
+<%- include("partials/header"); -%>
   <body>
-    <%- include("partials/header"); -%>
+    <div class="nav-bar-container">
+      <ul class="nav justify-content-end">
+          <li class="nav-item">
+          <a class="nav-link" href="/compose">Add worry</a>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link" href="/worries">Worry list</a>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link" href="#">Login</a>
+          </li>  
+          </li>
+      </ul>
+  </div>
         <div class="row">
           
         <% worryList.forEach(function(worry) { %>
-          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 card-div">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title"><%= worry.title %></h5>
@@ -39,22 +38,8 @@
               </div>
             </div>
           </div>
-    
-    
     <% }); %>
-  
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
-      integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
-      integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
-      crossorigin="anonymous"
-    ></script>
     <%- include("partials/footer"); -%>
   </body>
 </html>
