--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,27 @@
 <%- include("partials/header"); -%>
-  <body>
-    <h1>This is the login page.</h1>
+  <body class="login-body">
+    <div class="login-div">
+      <h1 class="login">Login</h1>
+      <div class="row">
+        <div class="col-sm-8">
+          <div class="card">
+            <div class="card-body">
+              <form action="/login" method="POST">
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" name="username">
+              </div>
+              <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" name="password">
+              </div>
+              <button type="submit" class="btn btn-dark login-btn">Login</button>
+            </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 <%- include("partials/footer"); -%>
   </body>
