--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,30 @@
 <%- include("partials/header"); -%>
 
   <body>
-    <h1>This is the Register page.</h1>
+    
+    <body class="register-body">
+      <div class="register-div">
+        <h1 class="register">Register</h1>
+        <div class="row">
+          <div class="col-sm-8">
+            <div class="card">
+              <div class="card-body">
+                <form action="/register" method="POST">
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input type="email" class="form-control" name="username">
+                </div>
+                <div class="form-group">
+                  <label for="password">Password</label>
+                  <input type="password" class="form-control" name="password">
+                </div>
+                <button type="submit" class="btn btn-dark register-btn">Register</button>
+              </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
     <%- include("partials/footer"); -%>
     
