come back, serialize bug fix.

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -20,6 +20,7 @@
             id="title"
             aria-describedby="emailHelp"
             value="<%= note.title %>"
+            autocomplete="off"
           />
         </div>
         <div class="mb-3">
