--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -24,6 +24,7 @@
             class="form-control"
             id="title"
             aria-describedby="emailHelp"
+            autocomplete="off"
           />
         </div>
         <div class="mb-3">
