--- a/views/connect.ejs
+++ b/views/connect.ejs
@@ -3,10 +3,10 @@
     <div class="connect-div">
       <div class="row">
         <div class="column social-media-div">
-        <a class="btn btn-md btn-social btn-google">
+        <a class="btn btn-md btn-social btn-google" href="/auth/google" role="button">
           <i class="fab fa-google"></i> Connect with Google
         </a>
-        <a class="btn btn-md btn-social btn-facebook">
+        <a class="btn btn-md btn-social btn-facebook" href="" role="button">
           <i class="fab fa-facebook-f"></i> Connect with Facebook
         </a>
         </div>
