Add facebook auth.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
   <body class="home-body">
 
     <div class="home-container">
-      <a href="/connect" class="btn-shine">Start Worries Notes</a>
+      <a href="/connect" class="btn-shine home-btn" role="button">Start Notes</a>
     </div>
   <%- include("partials/footer"); -%>
   </body>
