--- a/views/connect.ejs
+++ b/views/connect.ejs
@@ -6,7 +6,7 @@
         <a class="btn btn-md btn-social btn-google" href="/auth/google" role="button">
           <i class="fab fa-google"></i> Connect with Google
         </a>
-        <a class="btn btn-md btn-social btn-facebook" href="" role="button">
+        <a class="btn btn-md btn-social btn-facebook" href="/auth/facebook" role="button">
           <i class="fab fa-facebook-f"></i> Connect with Facebook
         </a>
         </div>
