--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -3,10 +3,10 @@
     <div class="nav-bar-container">
       <ul class="nav justify-content-end">
           <li class="nav-item">
-          <a class="nav-link" href="/compose">Add worry</a>
+          <a class="nav-link" href="/compose">Add note</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link" href="/worries">Worry list</a>
+          <a class="nav-link" href="/worries">Note list</a>
           </li>
           <li class="nav-item">
           <a class="nav-link" href="/logout">Log Out</a>
