--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,6 +20,11 @@
       crossorigin="anonymous"
     />
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+
     <!-- CONFIG THE HEAD THE RIGHT WAY -->
 
     <link rel="stylesheet" href="/css/bootstrap-social.css" />
