--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -43,6 +43,12 @@ a:hover {
 
 /*************************** HOME SECTION *******************************/
 
+.home-btn {
+  font-family: "Open Sans Condensed", sans-serif;
+  font-weight: 700;
+  font-size: 2.5rem;
+}
+
 .home-body {
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
     url("images/note_and_notebook.jpg") no-repeat center center/cover;
@@ -57,7 +63,6 @@ a:hover {
 }
 
 a.btn-shine {
-  font-size: 1.5rem;
   padding: 1rem 3rem;
   color: #f4f4f4;
   text-transform: uppercase;
