--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -3,13 +3,13 @@
     <div class="nav-bar-container">
       <ul class="nav justify-content-end">
           <li class="nav-item">
-          <a class="nav-link" href="/compose">Add Note</a>
+          <a class="nav-link" href="/compose">ADD</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link" href="/worries">Note List</a>
+          <a class="nav-link" href="/worries">NOTES</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link" href="/logout">Log Out</a>
+          <a class="nav-link" href="/logout">LOG OUT</a>
           </li>  
           </li>
       </ul>
