styling changes related with notes view. styles.css

--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -3,13 +3,13 @@
     <div class="nav-bar-container">
       <ul class="nav justify-content-end">
           <li class="nav-item">
-          <a class="nav-link" href="/compose">Add worry</a>
+          <a class="nav-link" href="/compose">ADD</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link" href="/worries">Worry list</a>
+          <a class="nav-link" href="/worries">NOTES</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
+          <a class="nav-link" href="#">LOG OUT</a>
           </li>  
           </li>
       </ul>
