--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -26,8 +26,28 @@ a:hover {
   color: #000;
 }
 
-.card {
-  margin: 0.5rem 0 0.5rem 0.5rem;
+.wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
+.card-container {
+  margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+  border: rgba(0, 0, 0, 0.25) solid 1px;
+  border-radius: 0.2rem;
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.25);
+}
+
+.card-body-container {
+  margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+}
+.card-btns {
+  margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+}
+.card-btns .btn {
+  border: rgba(0, 0, 0, 0.25) solid 1px;
+  border-radius: 0.2rem;
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.25);
 }
 .compose-form {
   padding: 5%;
