--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -148,30 +148,53 @@ a.btn-shine {
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
     url("images/note_and_notebook.jpg") no-repeat center center/cover;
   font-family: Arial, Helvetica, sans-serif;
-  height: 60vh;
+  height: 100vh;
 }
 
 .connect-div {
   border: 1px solid #3f3f44;
   border-radius: 10px;
-  width: 25%;
-  margin: 2%;
+  width: 30%;
   padding: 2%;
-  display: flex;
-  flex-direction: row;
-  align-self: center;
+  position: relative;
+  top: 35%;
+  left: 35%;
+  justify-content: center;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 985px) {
   .connect-div {
+    border: 1px solid #3f3f44;
+    border-radius: 10px;
+    width: 50%;
+    padding: 2%;
+    position: relative;
+    top: 35%;
+    left: 25%;
+    justify-content: center;
+    overflow-x: hidden;
+    overflow-y: hidden;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .connect-div {
+    border: 1px solid #3f3f44;
+    border-radius: 10px;
+    width: 90%;
+    padding: 2%;
+    position: relative;
+    left: 0;
+    width: 100vw;
+    justify-content: center;
+    overflow-x: hidden;
+    overflow-y: hidden;
   }
 }
 
 .row {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
+  flex-direction: column;
 }
 
 .social-media-div.column {
