--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,10 +16,23 @@ p {
 li > a {
   color: #3f3f44;
   background-color: #f4f4f4;
-  border-radius: 0.2rem;
+  border-radius: 0.1rem;
+  box-shadow: 0 0px 5px 0px rgba(255, 255, 255, 1);
+  font-family: "Varela Round", sans-serif;
   margin-right: 1rem;
-  text-transform: uppercase;
   outline: none;
+  text-decoration: none;
+  padding: 0.5rem;
+}
+
+li > a:hover {
+  color: #3f3f44;
+  background-color: #f4f4f4;
+  border-radius: 0.1rem;
+  box-shadow: 0 0px 5px 2px rgba(255, 255, 255, 1);
+  margin-right: 1rem;
+  outline: none;
+  padding: 0.5rem;
 }
 
 a:hover {
@@ -41,14 +54,18 @@ a:hover {
   border-radius: 0.2rem;
   box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.1);
   margin: 0.5rem 0.5rem 0.5rem 0.5rem;
-  width: 25vmax;
+  width: 23vw;
   overflow: hidden;
   box-sizing: border-box;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .card-container {
     width: 100vw;
+  }
+
+  .nav-bar-container {
+    padding: 2% 2%;
   }
 }
 
