--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -3,13 +3,13 @@
     <div class="nav-bar-container">
       <ul class="nav justify-content-end">
           <li class="nav-item">
-          <a class="nav-link" href="/compose">ADD</a>
+          <a class="" href="/compose">New Note</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link" href="/worries">NOTES</a>
+          <a class="" href="/worries">Notes</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link" href="/logout">LOG OUT</a>
+          <a class="" href="/logout">Lot out </a>
           </li>  
           </li>
       </ul>
@@ -19,6 +19,7 @@
           <% userNotes.forEach(function(Note) { %>
         
                 <div class="card-container">
+                  
                   <div class="card-body-container">
                     <h5 class="card-title text-wrap" ><%= Note.title %></h5>
                     <p class="card-text text-wrap" > <%= Note.content %></p>
