add card to add notes and delete the new notes button.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -93,6 +93,10 @@ a:hover {
   display: inline;
 }
 
+.new-card-margin {
+  margin-top: 0.5rem;
+}
+
 /*************************** NAV-BAR SECTION *******************************/
 
 .nav-bar-container {
