--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -3,9 +3,6 @@
     <div class="nav-bar-container">
       <ul class="nav justify-content-end">
           <li class="nav-item">
-          <a class="" href="/compose">New Note</a>
-          </li>
-          <li class="nav-item">
           <a class="" href="/worries">Notes</a>
           </li>
           <li class="nav-item">
@@ -43,6 +40,45 @@
           
 
             <% }); %>
+
+            <div class="card-container">
+              <div class="card-body-container">
+
+                <div class="card-btns">
+                      <form class="btn-form" action="/compose" method="post">  
+                            <input
+                              type="text"
+                              name="title"
+                              class="form-control"
+                              id="title"
+                              aria-describedby="emailHelp"
+                              autocomplete="off"
+                              placeholder="Title..."
+                            />
+                          </div>
+                          <div class="mb-3">
+                          
+                              <textarea
+                                class="form-control new-card-margin"
+                                name="content"
+                                id="content"
+                                rows="3"
+                                placeholder="Content..."
+                              ></textarea>
+
+                              <button type="submit"  class="btn btn-outline-dark new-card-margin">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+                                  <path d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"/>
+                                </svg>
+                              </button>
+
+                          </div>
+                      </form>
+
+                
+
+              </div>
+            </div>
 
         </div>
 
