--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,30 +13,8 @@ p {
   margin: 0;
 }
 
-li > a {
-  color: #3f3f44;
-  background-color: #f4f4f4;
-  border-radius: 0.1rem;
-  box-shadow: 0 0px 5px 0px rgba(255, 255, 255, 1);
-  font-family: "Varela Round", sans-serif;
-  margin-right: 1rem;
-  outline: none;
-  text-decoration: none;
-  padding: 0.5rem;
-}
-
-li > a:hover {
-  color: #3f3f44;
-  background-color: #f4f4f4;
-  border-radius: 0.1rem;
-  box-shadow: 0 0px 5px 2px rgba(255, 255, 255, 1);
-  margin-right: 1rem;
-  outline: none;
-  padding: 0.5rem;
-}
-
-a:hover {
-  color: #000;
+ul {
+  list-style-type: none;
 }
 
 .text-wrap {
@@ -57,6 +35,8 @@ a:hover {
   width: 23vw;
   overflow: hidden;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
 }
 
 @media screen and (max-width: 500px) {
@@ -64,13 +44,17 @@ a:hover {
     width: 100vw;
   }
 
-  .nav-bar-container {
+  .top-nav-bar {
     padding: 2% 2%;
   }
 }
 
 .card-body-container {
   margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+}
+
+.card-btns {
+  margin-top: auto;
 }
 
 .card-btns .btn {
@@ -93,17 +77,76 @@ a:hover {
   display: inline;
 }
 
-.new-card-margin {
-  margin-top: 0.5rem;
+/*************************** NEW NOTE SECTION *******************************/
+.new-card-btn {
+  border: rgba(0, 0, 0, 0.25) solid 1px;
+  border-radius: 0.2rem;
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.25);
+  display: inline;
+  margin: 0.5rem 5rem 0.5rem 0.5rem;
+}
+
+.new-content-area {
+  margin-top: 2%;
 }
 
 /*************************** NAV-BAR SECTION *******************************/
 
-.nav-bar-container {
+.top-nav-bar {
   padding: 1% 1% 1% 0;
-  background-color: #3f3f44;
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url("images/note_and_notebook.jpg") no-repeat center center/cover;
+  font-family: Arial, Helvetica, sans-serif;
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.25);
 }
 
+.top-nav-bar > ul {
+  display: flex;
+  justify-content: flex-end;
+  margin: 0;
+}
+
+.top-nav-bar > ul > li {
+  display: flex;
+  margin: 0 0% 0 0%;
+  font-size: 1rem;
+}
+
+.standard-btn {
+  font-family: "Open Sans Condensed", sans-serif;
+  padding: 1rem 3rem;
+  color: #f4f4f4;
+  text-transform: uppercase;
+  text-decoration: none;
+  border: 1px solid rgb(63, 63, 68);
+  position: relative;
+  overflow: hidden;
+}
+
+.standard-btn:hover {
+  box-shadow: 1px 1px 25px 10px rgba(63, 63, 68, 0.4);
+  color: #b9b9ca;
+}
+
+.standard-btn:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    120deg,
+    transparent,
+    rgba(63, 63, 68, 0.4),
+    transparent
+  );
+  transition: all 650ms;
+}
+
+.standard-btn:hover:before {
+  left: 100%;
+}
 /*************************** HOME SECTION *******************************/
 
 .home-btn {
