Add alarm selector date/hours for the notes.

--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -67,12 +67,16 @@
                                 placeholder="Content..."
                               ></textarea>
 
-                              <button type="submit"  class="new-card-btn btn btn-outline-dark">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
-                                  <path d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"/>
-                                </svg>
-                              </button>
-
+                             
+                              <div class="alarm-div">
+                                <button type="submit"  class="new-card-btn btn btn-outline-dark">
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+                                    <path d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"/>
+                                  </svg>
+                                </button>
+                                <!-- <label for="alarm">Choose a time for your appointment:</label> -->
+                                <input class="alarm-input" type="datetime-local" id="alarm" name="meeting-time" value="">
+                              </div>
                           </div>
                       </form>
 
