--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -83,11 +83,12 @@ ul {
   border-radius: 0.2rem;
   box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.25);
   display: inline;
-  margin: 0.5rem 5rem 0.5rem 0.5rem;
+  margin: 0.5rem 0rem 0rem 0rem;
 }
 
 .new-content-area {
   margin-top: 2%;
+  margin-bottom: 0 !important;
 }
 
 /*************************** NAV-BAR SECTION *******************************/
@@ -363,4 +364,20 @@ h1.register {
 
 .register-btn {
   margin-top: 3%;
+}
+
+/*************************** Alarm SECTION *******************************/
+
+.alarm-div {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0;
+}
+
+.alarm-input {
+  border: rgba(0, 0, 0, 0.25) solid 1px;
+  border-radius: 0.2rem;
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.25);
+  display: inline;
+  margin: 0.5rem 0rem 0rem 0.5rem;
 }
