Add date and hours to the database.

--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -75,7 +75,7 @@
                                   </svg>
                                 </button>
                                 <!-- <label for="alarm">Choose a time for your appointment:</label> -->
-                                <input class="alarm-input" type="datetime-local" id="alarm" name="meeting-time" value="">
+                                <input class="alarm-input" type="datetime-local" id="alarm" name="alarm" value="">
                               </div>
                           </div>
                       </form>
