--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -15,6 +15,9 @@
         
   <div class="wrapper">
           <% userNotes.forEach(function(Note) { %>
+
+
+           
         
                 <div class="card-container">
                   
@@ -38,6 +41,8 @@
                       </form>
                 </div>
                 </div>
+
+                
           
 
             <% }); %>
@@ -87,8 +92,39 @@
 
         </div>
 
+
+  
+
+
+
+        <script>
+
          
-         
+        // Notification Demo! 
+        
+ 
+        function showNotification() {
+
+          
+
+          const notification = new Notification("New message incoming", {
+            
+              body: "I am working.",
+          })
+        }
+
+            console.log(Notification.permission);
+            if (Notification.permission === "granted") {
+              alert("we have permission");
+            } else if (Notification.permission !== "denied") {
+              Notification.requestPermission().then(permission => {
+                  console.log(permission);
+              });
+            }
+
+            showNotification()
+
+        </script>
     
 
     <%- include("partials/footer"); -%>
