--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -20,7 +20,9 @@
            
         
                 <div class="card-container">
-                  
+
+                  <div id="data-attribute-div" data-title="<%= Note.title %>" data-content="<%= Note.content %>" data-alarm="<%= Note.alarm %>"></div>
+
                   <div class="card-body-container">
                     <h5 class="card-title text-wrap" ><%= Note.title %></h5>
                     <p class="card-text text-wrap" > <%= Note.content %></p>
@@ -101,28 +103,44 @@
 
          
         // Notification Demo! 
+
+        const userData = document.querySelector("#data-attribute-div");
+
+        console.log(userData.dataset.title);
+
         
- 
-        function showNotification() {
 
-          
+        <% userNotes.forEach(function(Note) { %>
 
-          const notification = new Notification("New message incoming", {
-            
-              body: "I am working.",
-          })
-        }
 
-            console.log(Notification.permission);
-            if (Notification.permission === "granted") {
-              alert("we have permission");
-            } else if (Notification.permission !== "denied") {
-              Notification.requestPermission().then(permission => {
-                  console.log(permission);
-              });
-            }
+              function showNotification() {
 
-            showNotification()
+
+                const notification = new Notification("<%= Note.title %>", {
+                  
+                  body: "<%= Note.content %>",
+              })
+              }
+
+
+              console.log("<%= Note.title %>", "<%= Note.content %>")
+
+                 
+
+                  // showNotification()
+
+
+        <% }); %>
+
+
+                console.log(Notification.permission);
+                  if (Notification.permission === "granted") {
+                    alert("we have permission");
+                  } else if (Notification.permission !== "denied") {
+                    Notification.requestPermission().then(permission => {
+                        console.log(permission);
+                    });
+                  }
 
         </script>
     
