--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -21,8 +21,6 @@
         
                 <div class="card-container">
 
-                  <div id="data-attribute-div" data-title="<%= Note.title %>" data-content="<%= Note.content %>" data-alarm="<%= Note.alarm %>"></div>
-
                   <div class="card-body-container">
                     <h5 class="card-title text-wrap" ><%= Note.title %></h5>
                     <p class="card-text text-wrap" > <%= Note.content %></p>
@@ -102,40 +100,40 @@
         <script>
 
          
-        // Notification Demo! 
+        // Notification! 
 
-        const userData = document.querySelector("#data-attribute-div");
-
-        console.log(userData.dataset.title);
-
-        
-
+       
         <% userNotes.forEach(function(Note) { %>
 
+          function showNotification() {
 
-              function showNotification() {
+            const notification = new Notification("<%= Note.title %>", {
+              
+              body: "<%= Note.content %>",
+              icon: "",
+          })
+          }
 
-
-                const notification = new Notification("<%= Note.title %>", {
-                  
-                  body: "<%= Note.content %>",
-              })
+            function alarm() {
+                // Create new Date using the data from database.
+                let setAlarm = new Date("<%= Note.alarm %>");
+                // Compare the current date - date from database
+                let alarmPlay = new Date(setAlarm) - new Date();
+                // Set the time out based on current date - date from database and display notification.
+                setTimeout(function () {
+                  showNotification();
+                }, alarmPlay);
               }
-
-
-              console.log("<%= Note.title %>", "<%= Note.content %>")
-
-                 
-
-                  // showNotification()
-
 
         <% }); %>
 
 
+        alarm(); 
+
+
                 console.log(Notification.permission);
                   if (Notification.permission === "granted") {
-                    alert("we have permission");
+                          console.log("we have permission");
                   } else if (Notification.permission !== "denied") {
                     Notification.requestPermission().then(permission => {
                         console.log(permission);
