Add icon to notification.

--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -110,7 +110,7 @@
             const notification = new Notification("<%= Note.title %>", {
               
               body: "<%= Note.content %>",
-              icon: "",
+              icon: "/css/images/icon.jpg"
           })
           }
 
