--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -64,6 +64,7 @@
                               type="text"
                               name="title"
                               class="form-control"
+
                               id="title"
                               aria-describedby="emailHelp"
                               autocomplete="off"
@@ -73,7 +74,7 @@
                           <div class="mb-3 new-content-area">
                           
                               <textarea
-                                class="form-control new-card-margin"
+                                class="form-control"
                                 name="content"
                                 id="content"
                                 rows="3"
