title take 100% width note bug fix.

--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -58,19 +58,20 @@
             <div class="card-container">
               <div class="card-body-container">
 
-                <div class="card-btns">
+                
                       <form class="btn-form" action="/compose" method="post">  
+                        
                             <input
                               type="text"
                               name="title"
-                              class="form-control"
+                              class="form-control title-input-custom"
 
                               id="title"
                               aria-describedby="emailHelp"
                               autocomplete="off"
                               placeholder="Title..."
                             />
-                          </div>
+                
                           <div class="mb-3 new-content-area">
                           
                               <textarea
@@ -80,7 +81,7 @@
                                 rows="3"
                                 placeholder="Content..."
                               ></textarea>
-
+                  
                              
                               <div class="alarm-div">
                                 <button type="submit"  class="new-card-btn btn btn-outline-dark">
