--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -30,7 +30,8 @@
         </textarea
           >
         </div>
-        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-outline-dark">Save</button> 
+        <input class="alarm-input" type="datetime-local" id="alarm" name="alarm" value="">
       </form>
     </div>
 
