--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -31,7 +31,7 @@
           >
         </div>
         <button type="submit" class="btn btn-outline-dark">Save</button> 
-        <input class="alarm-input" type="datetime-local" id="alarm" name="alarm" value="">
+        <input class="alarm-input" type="datetime-local" id="alarm" name="alarm" value="<%= note.alarm %>">
       </form>
     </div>
 
